# Copyright (c) Huawei Technologies Co., Ltd. 2020-2020. All rights reserved.

engine_path = "//foundation/ace/lite/third_party/jerryscript"

core_path = "${engine_path}/jerry-core"

debugger_path = "${engine_path}/jerry-debugger"

ext_path = "${engine_path}/jerry-ext"

libm_path = "${engine_path}/jerry-libm"

port_path = "${engine_path}/jerry-port"
