# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

declare_args() {
  thirdparty_jerryscript_enable_external_context = true
  thirdparty_jerryscript_inputjs_buffer_size = 32768
  thirdparty_jerryscript_snapshot_buffer_size = 24576
  thirdparty_jerryscript_bms_task_heap_size = 64
  thirdparty_jerryscript_js_task_heap_size = 64
}

engine_path = "//third_party/jerryscript"

core_path = "${engine_path}/jerry-core"

debugger_path = "${engine_path}/jerry-debugger"

ext_path = "${engine_path}/jerry-ext"

libm_path = "${engine_path}/jerry-libm"

port_path = "${engine_path}/jerry-port"

# support es6 with limitation
es6_support_defines = [
  "JERRY_ES2015=1",
  "JERRY_ES2015_BUILTIN_TYPEDARRAY=1",
  "JERRY_ES2015_BUILTIN_SET=1",
  "JERRY_ES2015_BUILTIN_PROMISE=1",
  "JERRY_ES2015_BUILTIN_PROXY=1",
  "JERRY_ES2015_MODULE_SYSTEM=1",
  "JERRY_ES2015_BUILTIN_MAP=1",
  "JERRY_ES2015_BUILTIN_WEAKMAP=0",
  "JERRY_ES2015_BUILTIN_WEAKSET=0",
  "JERRY_ES2015_BUILTIN_DATAVIEW=0",
  "JERRY_ES2015_BUILTIN_REFLECT=0",
]
