# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/zlite_component.gni")
import("//third_party/jerryscript/engine.gni")

static_library("jerry-ext") {

    sources = [
        "debugger/debugger-serial.c",
        "debugger/debugger-ws.c",
        "debugger/debugger-sha1.c",
        "debugger/debugger-rp.c",
        "debugger/debugger-common.c",
        "debugger/debugger-tcp.c",
        "module/module.c",
        "arg/arg.c",
        "arg/arg-js-iterator-helper.c",
        "arg/arg-transform-functions.c",
        "handler/handler-print.c",
        "handler/handler-register.c",
        "handler/handler-gc.c",
        "handler/handler-assert.c",
        "handle-scope/handle-scope.c",
        "handle-scope/handle-scope-allocator.c",
    ]
    include_dirs = [
        "include",
        "debugger",
        "common",
        "arg",
        "handle-scope",
        "${core_path}/include",
    ]
}
