# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
import("//third_party/jerryscript/engine.gni")

lite_component("jerry-ext") {
  if (ohos_kernel_type == "liteos_m") {
    features = [ ":jerry-ext_static" ]
  } else {
    features = [ ":jerry-ext_shared" ]
  }
}

jerry_ext_sources = [
  "arg/arg-js-iterator-helper.c",
  "arg/arg-transform-functions.c",
  "arg/arg.c",
  "debugger/debugger-common.c",
  "debugger/debugger-rp.c",
  "debugger/debugger-serial.c",
  "debugger/debugger-sha1.c",
  "debugger/debugger-tcp.c",
  "debugger/debugger-ws.c",
  "handle-scope/handle-scope-allocator.c",
  "handle-scope/handle-scope.c",
  "handler/handler-assert.c",
  "handler/handler-gc.c",
  "handler/handler-print.c",
  "handler/handler-register.c",
  "handler/handler-resource-name.c",
  "module/module.c",
]

jerry_ext_include_dirs = [
  "include",
  "debugger",
  "common",
  "arg",
  "handle-scope",
  "${core_path}/include",
]

if (board_toolchain_type == "iccarm") {
  config("jerry_ext_config") {
    cflags = [
      "--diag_suppress",
      "Pe940",
    ]
    defines = [
      "JERRY_FOR_IAR_CONFIG",
      "JERRY_GC_LIMIT=(0)",
      "JERRY_CPOINTER_32_BIT=0",
      "JERRY_ERROR_MESSAGES=1",
      "JERRY_PARSER=1",
      "JERRY_LINE_INFO=1",
      "JERRY_LOGGING=0",
      "JERRY_DEBUGGER=0",
      "JERRY_MEM_GC_BEFORE_EACH_ALLOC=0",
      "JERRY_PARSER_DUMP_BYTE_CODE=0",
      "JERRY_ES2015=0",
      "JERRY_REGEXP_STRICT_MODE=0",
      "JERRY_REGEXP_DUMP_BYTE_CODE=0",
      "JERRY_SNAPSHOT_EXEC=1",
      "JERRY_SNAPSHOT_SAVE=1",
      "JERRY_SYSTEM_ALLOCATOR=0",
      "JERRY_VALGRIND=0",
      "JERRY_VM_EXEC_STOP=0",
      "JERRY_STACK_LIMIT=(8)",
      "JERRY_IAR_JUPITER",
      "INPUTJS_BUFFER_SIZE=64*1024",
      "SNAPSHOT_BUFFER_SIZE=48*1024",
    ]
    if (thirdparty_jerryscript_enable_external_context == true) {
      defines += [ "JERRY_EXTERNAL_CONTEXT=1" ]
    }
    include_dirs = jerry_ext_include_dirs
    include_dirs += [
      "${core_path}",
      "${core_path}/jrt",
      "//commonlibrary/utils_lite/memory/include",
    ]
  }
}

if (ohos_kernel_type == "liteos_m") {
  lite_library("jerry-ext_static") {
    target_type = "static_library"
    sources = jerry_ext_sources
    if (board_toolchain_type == "iccarm") {
      public_configs = [ ":jerry_ext_config" ]
    } else {
      include_dirs = jerry_ext_include_dirs
    }
  }
} else {
  lite_library("jerry-ext_shared") {
    target_type = "shared_library"
    sources = jerry_ext_sources
    include_dirs = jerry_ext_include_dirs
  }
}
