# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
import("//third_party/jerryscript/engine.gni")

lite_component("jerry-libm") {
  features = [ ":jerry-libm_shared" ]
}

lite_library("jerry-libm_shared") {
  target_type = "shared_library"
  sources = [
    "acos.c",
    "acosh.c",
    "asin.c",
    "asinh.c",
    "atan.c",
    "atan2.c",
    "atanh.c",
    "cbrt.c",
    "ceil.c",
    "copysign.c",
    "cosh.c",
    "exp.c",
    "expm1.c",
    "fabs.c",
    "finite.c",
    "floor.c",
    "fmod.c",
    "isnan.c",
    "log.c",
    "log10.c",
    "log1p.c",
    "log2.c",
    "nextafter.c",
    "pow.c",
    "scalbn.c",
    "sinh.c",
    "sqrt.c",
    "tanh.c",
    "trig.c",
  ]
  include_dirs = [ "include" ]
}
