# Copyright (c) Huawei Technologies Co., Ltd. 2020-2020. All rights reserved.
# Description: Gn compile jerry-port-default
# Create: 2020-01-16
import("//build/lite/config/component/zlite_component.gni")
import("//foundation/ace/lite/third_party/jerryscript/engine.gni")

static_library("jerry-port-default") {

    sources = [
        "default-date.c",
        "default-module.c",
        "default-fatal.c",
        "default-io.c",
        "default-debugger.c",
        "default-external-context.c",
    ]
    include_dirs = [
        "include",
        "${core_path}/include",
    ]
}
