# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
import("//third_party/jerryscript/engine.gni")
import("//third_party/jerryscript/tests/jerry/test_helper.gni")

host_unittest_action("JsEs2015Test") {
  module_out_path = module_output_path
  sources = []
  deps = [
    "//third_party/jerryscript:jerry",
    "//third_party/jerryscript:jerry-snapshot",
    "//third_party/jerryscript:libjerryscript",
  ]
}
host_unittest_action("JsEsTest") {
  module_out_path = module_output_path
  sources = []
  deps = [
    "//third_party/jerryscript:jerry",
    "//third_party/jerryscript:jerry-snapshot",
    "//third_party/jerryscript:libjerryscript",
  ]
}

group("jerry_js_test_es5.1") {
  testonly = true
  deps = [ ":JsEsTest" ]
}

group("jerry_host_js_test_es5.1") {
  testonly = true
  deps = [ ":JsEsTestAction" ]
}

group("jerry_js_test_es2015") {
  testonly = true
  deps = [ ":JsEs2015Test" ]
}

group("jerry_host_js_test_es2015") {
  testonly = true
  deps = [ ":JsEs2015TestAction" ]
}
